--- a/filebrowser/templates/base.html
+++ b/filebrowser/templates/base.html
@@ -7,8 +7,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <style>
+        body {
+            display: flex;
+            min-height: 100vh;
+            flex-direction: column;
+        }
+
+        main {
+            flex: 1 0 auto;
+        }
+    </style>
 </head>
-<body>
+<main>
     <nav style="padding:0px 15px;">
         <div class="nav-wrapper">
             <div class="col s12">
@@ -21,40 +32,15 @@
     <div class="container">
         <div class="card-panel z-depth-2">
             <table class="highlight">
-                <tr>
-                    <th>Folder/Files</th>
-                    <th>Last modified</th>
-                    <th>Size</th>
-                </tr>
-                {% for file in files %}
-                <tr>
-                    <td>
-                        {% if file.is_file and file.playable %}
-                            <i class="tiny material-icons">perm_media</i>
-                        {% elif file.is_file and not file.playable %}
-                            <i class="tiny material-icons">insert_drive_file</i>
-                        {% else %}
-                            <i class="tiny material-icons">folder</i>
-                        {% endif %}
-                        &nbsp;
-                        {% if file.playable %}
-                            <a class="waves-effect waves-light modal-trigger" href="#video_window" onclick="showVideo('{{file.name}}', '?path={{file.path.replace('\\','\\\\')}}', '{{file.playable_tag}}')">{{file.name}}</a>
-                        {% else %}
-                            <a href="?path={{file.path}}">{{file.name}}</a>
-                        {% endif %}
-                        &nbsp;
-                    </td>
-                    <td>{{file.time.strftime("%b %d %Y %I:%M%p")}}</td>
-                    <td>{{file.size}}</td>
-                </tr>
-                {% endfor %}
+                {% block content %}
+                {% endblock %}
             </table>
         </div>
     </div>
     <div id="video_window" class="modal modal-fixed-footer">
         <div class="modal-content">
             <h4 id="video_window_title"></h4>
-            <video class="responsive-video" id="video_control" controls preload="metadata">
+            <video style="width: 100%; height: auto" id="video_control" controls preload="metadata">
                 <source>
             </video>
         </div>
@@ -62,14 +48,15 @@
             <a id="download" class="waves-effect waves-light btn">Download</a>&nbsp;
             <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
         </div>
-   </div>
-    <p></p>
+    </div>
     <script>
         $(document).ready(function() {
             var stopVideoOnClose = function() {
                 $('#video_window video')[0].pause();
             };
-            $(".modal").modal({onCloseStart:stopVideoOnClose, height: "auto", maxHeight: "90%"});
+            $(".modal").modal({onCloseStart:stopVideoOnClose});
+            $(".modal").attr('maxHeight', '100%')
+            $(".modal").attr('overflow', 'visible')
         });
 
         lastFileName = ''
@@ -85,5 +72,14 @@
             $('#video_window video')[0].play();
         }
     </script>
-</body>
+</main>
+<footer class="page-footer">
+  <div class="footer-copyright">
+      <div class="container">
+          Powered by <a href="https://github.com/kingkingyyk/SimpleWebFileBrowser" target="_blank">SimpleWebFileBrowser</a> |
+          Theme by <a href="https://materializecss.com" target="_blank">Material CSS</a> |
+          {{footer_text}}
+      </div>
+  </div>
+</footer>
 </html>
