--- a/filebrowser/templates/mobile/index.html
+++ b/filebrowser/templates/mobile/index.html
@@ -2,30 +2,31 @@
 
 {% block content %}
     {% for file in files %}
-    <tr>
-        <td>
-            <p>
-            {% if file.is_file and file.playable %}
-                <i class="small material-icons">perm_media</i>
-            {% elif file.is_file and not file.playable %}
-                <i class="small material-icons">insert_drive_file</i>
-            {% else %}
-                <i class="small material-icons">folder</i>
-            {% endif %}
-            &nbsp;
-            {% if file.playable %}
-                <a class="waves-effect waves-light modal-trigger" style="font-size: 32px" href="#video_window" onclick="showVideo('{{file.name}}', '?path={{file.path.replace('\\','\\\\')}}', '{{file.playable_tag}}')">{{file.name}}</a>
-            {% else %}
-                <a href="?path={{file.path}}" style="font-size: 32px">{{file.name}}</a>
-            {% endif %}
-            &nbsp;</p>
-            <p style="font-size: 20px">
-                {{file.time.strftime("%b %d %Y %I:%M%p")}}
-                {% if file.size != '--' %}
-                     - {{file.size}}
-                {% endif %}
-            </p>
-        </td>
-    </tr>
+            <tr>
+                <td>
+                    {% if file.playable %}
+                        <a class="waves-effect waves-light modal-trigger" href="#video_window" style="color: inherit; text-decoration: none; width:100%; height: 100%" onclick="showVideo('{{file.name}}', '?path={{file.path.replace('\\','\\\\')}}', '{{file.playable_tag}}')">
+                    {% else %}
+                        <a href="?path={{file.path}}" style="color: inherit; text-decoration: none; width:100%; height: 100%">
+                    {% endif %}
+                        <p style="font-size: 48px">
+                        {% if file.is_file and file.playable %}
+                            <i class="small material-icons">perm_media</i>
+                        {% elif file.is_file and not file.playable %}
+                            <i class="small material-icons">insert_drive_file</i>
+                        {% else %}
+                            <i class="small material-icons">folder</i>
+                        {% endif %}
+                        {{file.name}}
+                        </p>
+                        <p style="font-size: 30px">
+                            {{file.time.strftime("%b %d %Y %I:%M%p")}}
+                            {% if file.size != '--' %}
+                                 - {{file.size}}
+                            {% endif %}
+                        </p>
+                    </a>
+                </td>
+            </tr>
     {% endfor %}
 {% endblock %}
